[package]
name = "voi"
version = "0.1.0"
edition = "2024"
authors = [ "Oxy" ]
description = "Work in Progress"
license = "MIT"
respository = ""
homepage = ""
readme = "README.md"
keywords = [ "windows", "macos", "linux", "mircrosoft", "apple", "windowing", "winit", "tao", "rust" ]
categories = [ "" ]

[dependencies]
