[package]
name = "voi"
version = "0.1.0"
edition = "2024"
authors = [ "Oxy" ]
description = "Work in Progress"
license = "MIT"
respository = "https://github.com/Discomfit/voi"
homepage = "https://github.com/Discomfit/voi"
readme = "README.md"
keywords = [ "windowing", "desktop", "rust" ]
categories = [ "gui" ]

[dependencies]
